examples/test/testpolicy12280.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12280
  namespace: namespace35
spec:
  podSelector:
    matchLabels:
      key26: value25
      key14: value41
      key48: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value38
          key47: value25
          key10: value15
      podSelector:
        matchLabels:
          key34: value21
          key21: value42
          key12: value8
